# OOP_course_mai

./: README.md
lab1/: 1  CMakeLists.txt  a.out  extractnumber.cpp  extractnumber.h  lab1.cpp  test_lab1.cpp
lab2/: CMakeLists.txt  a.out  c.cpp  eleven.cpp  eleven.h  lab2.cpp  run_test.sh  test_lab2.cpp
lab3/: CMakeLists.txt  all.h  figure.cpp  figure_arr.cpp  figure_arr.h  lab3.cpp  point.cpp  point.h  rectangle.cpp  run.bash  square.cpp  test_lab3.cpp  triangle.cpp  triangle.h
lab3/header/: figure.h  figure_arr.h  rectangle.h  square.h
lab3/src/: figure.cpp  figure_arr.cpp  lab3.cpp  point.cpp  rectangle.cpp  square.cpp  test_lab3.cpp  triangle.cpp
lab5/: lab5.cpp  test_lab5.cpp
lab5/src/: allocator.h
lab_6/: main.cpp
lab_6/include/: battlefield.h  dragon.h  druid.h  elf.h  npc.h  observers.h
lab_6/src/: battlefield.cpp  dragon.cpp  druid.cpp  elf.cpp  npc.cpp  observers.cpp
lab_6/test/: tests.cpp
lab_7/: main.cpp
lab_7/include/: battlefield.h  dragon.h  druid.h  elf.h  npc.h  observers.h
lab_7/src/: dragon.cpp  druid.cpp  elf.cpp  npc.cpp  observers.cpp
lab_7/test/: tests.cpp
test_lab4/: .gitignore
test_lab4/lab4/: CMakeLists.txt  my_program
test_lab4/lab4/header/: array.h  array.hpp  figure.h  figure.hpp  figure_arr.h  figure_arr.hpp  point.h  point.hpp  rectangle.h  rectangle.hpp  square.h  square.hpp  triangle.h  triangle.hpp
test_lab4/lab4/src/: array.cpp  figure.cpp  figure_arr.cpp  lab3.cpp  lab4.cpp  point.cpp  prepr_lab3.cpp  rectangle.cpp  square.cpp  test_lab3.cpp  triangle.cpp
